--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -9,10 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5e565bfdfad32b0012b2f768&product=inline-share-buttons' async='async'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+
+
+
+
 
 
 
